--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -7,7 +7,7 @@
 
 <ng-template #pollLoaderItem>
   <div class="loading movie-poll">
-    <mat-card>
+    <mat-card class="poll-item-loader-card">
       <div class="flex movie-content">
         <div class="loading-image poster-mockup">
           <div class="loading-movie-score size-s"></div>
