Fix skeleton template. Fix issues with movie-dialog when adding poll-items. Improve production country pipe. Fix issue with voting logic.

--- a/src/app/add-poll/add-poll.component.html
+++ b/src/app/add-poll/add-poll.component.html
@@ -118,6 +118,8 @@
           [creating]="true"
           [pollItem]="pollItem"
           [removable]="true"
+          [reactable]="false"
+          [voteable]="false"
           (onRemoved)="remove($event)"
         ></movie-poll-item>
       </ng-container>
