--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -119,7 +119,7 @@
                     {{ status.movie | credit : "directors" }}
                   </div>
                   <div class="country-of-origin">
-                    {{ status.movie | productionCountry }}
+                    {{ status.movie | productionCountry : "1" }}
                   </div>
                 </div>
                 <div class="overview-info">
