--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -28,6 +28,7 @@
         <div class="loading-main-text"></div>
         <div class="loading-main-text"></div>
         <div class="loading-main-text short"></div>
+        <div class="loading-main-text short desktop"></div>
       </div>
       <div class="loading-btn"></div>
     </div>
