Fix issuw with voter pipe, desktop loading view. Fixes dialog close button positioning.

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -368,7 +368,7 @@
       </div>
       <div class="voter-list">
         <ng-container *ngIf="data.voteCount"
-          >Voters ( {{ data.voteCount }} ): {{ getVoterNames(data.voters)
+          >Voters ( {{ data.voteCount }} ): {{ data.voters | voters
           }}</ng-container
         >
       </div>
