--- a/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.scss
+++ b/src/app/movie-poll-item/add-movie-dialog/add-movie-dialog.scss
@@ -137,7 +137,11 @@ mat-form-field.search-movie {
 
 .absolute-container {
   position: absolute;
-  right: 37px;
+  width: 100%;
+  display: flex;
+  justify-content: right;
+  left: 0;
+  top: 0;
 }
 
 .close-button {
@@ -146,6 +150,5 @@ mat-form-field.search-movie {
   color: white;
   text-shadow: 0px 0px 6px #0000009c;
   z-index: 10;
-  padding: 0 15px 10px 20px;
-  right: 15px;
+  padding: 6px 15px 10px 20px;
 }
