--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.scss
@@ -713,7 +713,11 @@ mat-expansion-panel.mat-expansion-panel {
 
 .absolute-container {
   position: absolute;
-  right: 37px;
+  width: 100%;
+  display: flex;
+  justify-content: right;
+  left: 0;
+  top: 0;
 }
 
 .close-button {
@@ -722,8 +726,7 @@ mat-expansion-panel.mat-expansion-panel {
   color: white;
   text-shadow: 0px 0px 6px #0000009c;
   z-index: 10;
-  padding: 0 15px 10px 20px;
-  right: 15px;
+  padding: 6px 15px 10px 20px;
 }
 
 .watch-country {
